--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<div id='game'>
 		<canvas width="900" height="350"></canvas>
 		<div id='fps'></div><!-- fps -->
+		<p>
+			WASD to move + SPACE to attack
+		</p>
 	</div><!-- game -->
 </body>
 </html>
