--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div id='game'>
+		<div class='overlay'></div><!-- overlay -->
 		<canvas width="900" height="350"></canvas>
 		<div id='fps'></div><!-- fps -->
 		<p>
